	PR ld/12761 	* elflink.c (elf_link_add_object_symbols): Process .gnu.warning 	sections when building shared libraries.

* lib/ld-lib.exp (run_cc_link_tests): Add an optional 8th
	parameter - an expected warning message from the linker.
	* ld-elf/shared.exp (build_tests): Expect a warning message when
	building the libbarw.so library.

	* ld-elf/shared.exp: Run library building tests even when not
	building a native toolchain.